add max-width to textarea

--- a/html/os44/index.html
+++ b/html/os44/index.html
@@ -38,8 +38,8 @@
                 </ol>
 
                 <button onclick="javascript:conv()">convert</button><br />
-        <textarea id="str1" cols="50" rows="10"></textarea>
-        <textarea id="str2" cols="50" rows="10" style="display:none"></textarea>
+        <textarea id="str1" cols="50" rows="10" style="max-width:100%"></textarea>
+        <textarea id="str2" cols="50" rows="10" style="max-width:100%;display:none"></textarea>
 
         <h2>Outline</h2>
         <p>
