--- a/html/index.xhtml
+++ b/html/index.xhtml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html [
-<!ENTITY lf "&#10;">
-<!ENTITY nbsp "&#160;">
-<!ENTITY yen "&#165;">
 <!ENTITY copy "&#169;">
-<!ENTITY laquo "&#171;">
-<!ENTITY raquo "&#187;">
-<!ENTITY plusmn "&#177;">
-<!ENTITY minus "&#8722;">
-<!ENTITY hellip "&#8230;">
-<!ENTITY lrm "&#8206;">
 <!ENTITY adm_m_local "mgmnjp">
 <!ENTITY adm_m_domain "icloud.com">
 ]>
@@ -65,8 +56,8 @@
 				<section class="card">
 					<header>
 						<div class="clip"></div>
-						<h3>what</h3>
-						<p>watching substations, server/networks hobbyist and Mogamin love</p>
+						<h3>whoami</h3>
+						<p>a hobbyist server/network engineer, substation otaku, and Mogamin love</p>
 						<h4>interests</h4>
 						<ul>
 							<li>network management</li>
@@ -77,11 +68,6 @@
 							<li><a href="https://www.dmm.com/netgame/feature/kancolle.html">モガミン</a></li>
 							<li><a href="https://wikiwiki.jp/kancolle/%E6%9C%80%E4%B8%8A">Mogamin</a></li>
 						</ul>
-						<h4>name</h4>
-						<ul>
-							<li>mogaminsk / みすく</li>
-							<li>ほかにもあるけど いまは↑</li>
-						</ul>
 					</header>
 				</section>
 			
@@ -91,17 +77,11 @@
 							<div class="clip"></div>
 							<h3>ActivityPub</h3>
 							<dl>
-								<dt><a href="https://don.kumarin.co/@mg" title="@mg@kumarin.co" rel="me">@mg@kumarin.co</a> - 丼くま</dt>
+								<dt><a href="https://don.kumarin.co/@mg" title="@mg@kumarin.co" rel="me">@mg@kumarin.co</a></dt>
 								<dd>自鯖。メイン。</dd>
 
-								<dt><a href="https://mstdn.jp/@kaz_ic" title="@kaz_ic@mstdn.jp" rel="me">@kaz_ic@mstdn.jp</a> - jp鯖</dt>
-								<dd>自鯖に移る前はここにいました</dd>
-
-								<dt><a href="https://fedibird.com/@kaz_ic" title="@kaz_ic@fedibird.com" rel="me">@kaz_ic@fedibird.com</a> - Fedibird</dt>
-								<dd>ほぼつかってない</dd>
-
-								<dt><a href="https://misskey.io/@mgmn" title="@mgmn@misskey.io" rel="me">@mgmn@misskey.io</a> - misskey.io</dt>
-								<dd>スパイ行為用。つかってない。</dd>
+								<dt><a href="https://matitodon.com/@mogaminsk" title="@mogaminsk@matitodon.com" rel="me">@mogaminsk@matitodon.com</a></dt>
+								<dd>まち</dd>
 							</dl>
 						</header>
 					</section>
@@ -166,7 +146,7 @@
 							<dd>2ch (だった掲示板サイト) のdat落ち監視ツール</dd>
 
 							<dt><a href="https://v2c.mgmn.jp/">v2c.mgmn.jp</a></dt>
-							<dd>2ch+Twitter 専ブラ V2C の wiki などの管理をしています</dd>
+							<dd>2ch+Twitter 専ブラ V2C の wiki などの管理をしているかも</dd>
 						</dl>
 					</header>
 				</section>
