--- a/html/index.xhtml
+++ b/html/index.xhtml
@@ -78,7 +78,10 @@
 							<h3>ActivityPub</h3>
 							<dl>
 								<dt><a href="https://don.kumarin.co/@mg" title="@mg@kumarin.co" rel="me">@mg@kumarin.co</a></dt>
-								<dd>自鯖。メイン。</dd>
+								<dd>自鯖 primary</dd>
+
+								<dt><a href="https://mk.mgmn.jp/@mogaminsk" title="@mogaminsk@mk.mgmn.jp" rel="me">@mogaminsk@mk.mgmn.jp</a></dt>
+								<dd>自鯖 secondary</dd>
 
 								<dt><a href="https://matitodon.com/@mogaminsk" title="@mogaminsk@matitodon.com" rel="me">@mogaminsk@matitodon.com</a></dt>
 								<dd>まち</dd>
@@ -119,6 +122,7 @@
 						<dl>
 							<dt>email</dt>
 							<dd><a href="mailto:&adm_m_local;@&adm_m_domain;" rel="me">&adm_m_local;@&adm_m_domain;</a></dd>
+
 							<dt>openPGP public key</dt>
 							<dd><a href="https://keys.openpgp.org/search?q=C4168F9001E52ADF167791833589C65DE4960DD3">C416 8F90 01E5 2ADF 1677 9183 3589 C65D E496 0DD3</a></dd>
 						</dl>
