use <footer> instead of <div> to be more semantic

--- a/html/index.xhtml
+++ b/html/index.xhtml
@@ -157,7 +157,7 @@
 				
 			</div><!-- /#sheet1 -->
 			
-			<div id="contentFooter">&copy; mogaminsk</div>
+			<footer>&copy; mogaminsk</footer>
 		</section><!-- /#content -->
 		
 	</body>
